err/funds-data-wyr.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/funds_data_wyr'...
Compiling './lib/python3.5/site-packages/funds_data_wyr/funds_data.py'...
***   File "./lib/python3.5/site-packages/funds_data_wyr/funds_data.py", line 35
    print "version %s" % __version__
                     ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/funds_data_wyr/funds_download.py'...
***   File "./lib/python3.5/site-packages/funds_data_wyr/funds_download.py", line 11
    print "Downloading %s......" % url
                               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/funds_data_wyr/funds_gen_sorting_files.py'...
***   File "./lib/python3.5/site-packages/funds_data_wyr/funds_gen_sorting_files.py", line 35
    print "Unrecognized tables: There are more than 1 pair of 'tbody' tags."
                                                                           ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/funds_data_wyr/funds_get_top_ones.py'...
***   File "./lib/python3.5/site-packages/funds_data_wyr/funds_get_top_ones.py", line 80
    print "The following funds belong to top %d funds in recent %s" % (Top, rating_set)
                                                                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/funds_data_wyr/settings.py'...
***   File "./lib/python3.5/site-packages/funds_data_wyr/settings.py", line 12
    print "Cannot create %s, will choose another folder for data: %s" % (OLD_BASEDIR, BASEDIR)
                                                                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/funds_data_wyr-0.99.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
